Add mouse options

--- a/data/index.htm
+++ b/data/index.htm
@@ -3073,6 +3073,40 @@
             },
           ],
         },
+        {
+          name: "Mouse",
+          value: "14",
+          subitems: [
+            {
+              name: "Left Mouse Button",
+              value: "1",
+            },
+            {
+              name: "Right Mouse Button",
+              value: "2",
+            },
+            {
+              name: "Middle Mouse Button",
+              value: "3",
+            },
+            {
+              name: "Scroll up",
+              value: "4",
+            },
+            {
+              name: "Scroll down",
+              value: "5",
+            },
+            {
+              name: "Scroll left",
+              value: "6",
+            },
+            {
+              name: "Scroll right",
+              value: "7",
+            },
+          ],
+        },
       ];
     </script>
 
